[gd_scene load_steps=7 format=2]

[ext_resource path="res://battle/HUD/status_bar/action_gauge_bg.png" type="Texture" id=1]
[ext_resource path="res://battle/HUD/status_bar/hp_gauge_fill.png" type="Texture" id=2]
[ext_resource path="res://fonts/montreal/Montreal.tres" type="DynamicFont" id=3]
[ext_resource path="res://battle/HUD/status_bar/action_gauge_fill.png" type="Texture" id=4]
[ext_resource path="res://battle/HUD/status_bar/hp_gauge_bg.png" type="Texture" id=5]
[ext_resource path="res://battle/HUD/status_bar/CharacterStats.gd" type="Script" id=6]

[node name="Character_Stats" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 330.0
margin_bottom = 40.0

[node name="Name" type="Label" parent="HBoxContainer"]
margin_top = 12.0
margin_right = 89.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = "Funky Monkey"

[node name="ProgressBars" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 93.0
margin_right = 330.0
margin_bottom = 40.0

[node name="HPInfo" type="MarginContainer" parent="HBoxContainer/ProgressBars"]
margin_right = 237.0
margin_bottom = 16.0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/ProgressBars/HPInfo"]
margin_right = 237.0
margin_bottom = 16.0

[node name="HPGauge" type="TextureProgress" parent="HBoxContainer/ProgressBars/HPInfo/HBoxContainer"]
margin_right = 200.0
margin_bottom = 16.0
value = 75.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 2 )

[node name="HP" type="Label" parent="HBoxContainer/ProgressBars/HPInfo/HBoxContainer"]
margin_left = 204.0
margin_right = 237.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 3 )
text = "10/10"
align = 2
valign = 1

[node name="ReadyInfo" type="MarginContainer" parent="HBoxContainer/ProgressBars"]
margin_top = 20.0
margin_right = 237.0
margin_bottom = 30.0

[node name="ReadyGauge" type="TextureProgress" parent="HBoxContainer/ProgressBars/ReadyInfo"]
margin_right = 237.0
margin_bottom = 10.0
value = 25.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 4 )
